infrastructure/forgejo/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: ssh
      port: 2222
      targetPort: 2222
